*1. create the auth login page 2. all logic now is handling using the bloc 3. use the validators on the login page

--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -17,6 +17,10 @@
     "already_have_account": "لديك حساب بالفعل؟",
     "sign_up": "تسجيل",
     "sign_in": "دخول",
+    "welcome_back": "مرحباً بعودتك!",
+    "login_subtitle": "سجل الدخول لمتابعة رحلتك مع الطعام الصحي",
+    "email_hint": "أدخل عنوان بريدك الإلكتروني",
+    "password_hint": "أدخل كلمة المرور",
     "full_name": "الاسم الكامل",
     "phone_number": "رقم الهاتف",
     "verify_otp": "التحقق من الرمز",
