--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -17,6 +17,10 @@
     "already_have_account": "Already have an account?",
     "sign_up": "Sign Up",
     "sign_in": "Sign In",
+    "welcome_back": "Welcome Back!",
+    "login_subtitle": "Sign in to continue your healthy food journey",
+    "email_hint": "Enter your email address",
+    "password_hint": "Enter your password",
     "full_name": "Full Name",
     "phone_number": "Phone Number",
     "verify_otp": "Verify OTP",
